Add contact Modal, and columns to index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 .jumbotron {
   text-align: center;
   padding: 30px;
-  margin: 40px 10px 10px 10px;
+  margin: 70px 10px 10px 10px;
+  border-radius: 10px;
 }
 .carousel-indicators .active {
   background-color: black;
@@ -10,8 +11,25 @@
 .carousel-indicators li {
   border-color: black;
 
+
 }
 
-.container {
+.carousel-indicators {
+  bottom: 2px;
+}
+
+.row h3 {
+  text-align:center;
+}
+
+.model-content {
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.model-header {
+  text-align: center;
+  border-bottom: 1px solid #e5e5e5;
 
 }
