--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,26 @@
 .item {
  height: 400px;
 }
-.carousel-inner {
-  /*overflow: visible;*/
+.bigContent {
+  background-color: gray;
+}
+
+.bigContent h1 {
+  font-size:  70px;
+  font-family: monospace;
+  color: black;
+  font-weight: bold;
+  padding: 20px;
+  text-align: center;
+
+}
+
+.bigContent img {
+  width: 80%;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding: 20px;
+
 }
